# AssetBridge

./: .dockerignore  .env.example  .env.secrets.example  .gitignore  AGENTS.md  API_VALIDATION_REPORT.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  SYSTEM_VERIFICATION_REPORT.md  check-db.ts  check_after_fix.ts  check_all_assets.ts  check_db.py  check_db_after_scrape.ts  check_dupes.ts  check_dupes2.ts  check_dupes3.ts  check_fixes.ts  check_jpy_assets.ts  cleanup.js  cleanup_db.ts  db_check.ts  db_check2.ts  db_check3.ts  db_check_stocks.ts  db_dividend_check.ts  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  ecosystem.config.ts  ecosystem.docker.config.cjs  fix_currency.ts  inspect_db_schema.ts  list_tables.js  package.json  playwright.config.ts  pnpm-lock.yaml  query.ts  (+20 more)
apps/api/: README.md  cleanup.js  db-check.js  package.json  pyproject.toml  tsconfig.json
apps/api/src/: bun-env.d.ts  index.ts  main.py  trpc.ts
apps/api/src/config/: settings.py
apps/api/src/core/: ai_comments.py  analyzer.py  dividend_calculator.py  llm_client.py  reporter.py  simulator.py
apps/api/src/data_sources/: crypto_client.py  news_client.py  yfinance_client.py
apps/api/src/db/: database.py  models.py
apps/api/src/lib/: cache.ts  dividendCache.ts  priceCache.ts
apps/api/src/middleware/: auth.ts
apps/api/src/router/: analysis.ts  dividends.ts  income_expense.ts  index.ts  logs.ts  market.ts  portfolio.ts  scrape.ts  settings.ts  simulator.ts
apps/api/src/routers/: ai_comments.py  assets.py  dividends.py  income_expense.py  insights.py  portfolio.py  scrape.py  services.py  settings.py  simulator.py
apps/crawler/: README.md  package.json  pyproject.toml  tsconfig.json
apps/crawler/src/: browser-server.mjs  env.ts  index.ts  main.py  worker.ts
apps/discord-bot/: README.md  package.json  pyproject.toml
apps/discord-bot/src/: bot.py  env.ts  index.ts
apps/mcp/: README.md  package.json  pyproject.toml
apps/mcp/src/: index.ts  server.py  trpc-client.ts
(+139 files in other folders)
