[project]
name = "assetbridge-crawler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "playwright-stealth>=1.0",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "apscheduler>=3.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
